# rick-morty

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
data/: characters.json  episodes.json
rick_morty/: dependencies.py  exceptions.py  main.py  settings.py
rick_morty/auth/: auth.py
rick_morty/database/: __init__.py  models.py
rick_morty/endpoints/: characters.py  comments.py  episodes.py  users.py
rick_morty/repositories/: __init__.py  base.py  characters.py  comments.py  episodecaracters.py  episodes.py  users.py
rick_morty/schemas/: __init__.py  characters.py  comments.py  episodes.py  users.py
rick_morty/scripts/: db.py  load_data.py
rick_morty/utils/: __init__.py
tests/: conftest.py  test_rick_morty.py
tests/functional/: test_characters.py  test_rick_morty.py
tests/integration/: test_characters.py  test_comments.py  test_episodes.py  test_rick_morty.py  test_users.py
