[tool.poetry]
name = "rick-morty"
version = "0.1.0"
description = ""
authors = ["BARRY <mamadoubo.barry@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
uvicorn = "^0.17.5"
SQLAlchemy = "^1.4.32"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
