[tool.poetry]
name = "rick-morty"
version = "0.1.0"
description = ""
authors = ["BARRY <mamadoubo.barry@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
uvicorn = "^0.17.5"
SQLAlchemy = "^1.4.32"
bcrypt = "^3.2.0"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
passlib = "^1.7.4"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
